updated integrations